ordrd sync re-org part 1
